--- a/sources/styles/app.css
+++ b/sources/styles/app.css
@@ -56,3 +56,30 @@
 	font-size:20px;
 	vertical-align:middle;
 }
+
+.user_icon {
+    float: left;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: thistle;
+}
+
+.user_name,
+.user_email {
+    margin: 5px 0;
+    padding-left: 50px;
+    line-height: 14px;
+}
+
+.user_name {
+    font-size: 14px;
+}
+
+.user_email {
+    font-size: 11px;
+}
+
+.users_list {
+    padding-top: 15px;
+}
