--- a/sources/styles/app.css
+++ b/sources/styles/app.css
@@ -83,3 +83,14 @@
 .users_list {
     padding-top: 15px;
 }
+
+.users_list .webix_list_item {
+    position: relative;
+}
+
+.remove_contact {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    margin-top: -10px;
+}
